--- a/Allyson/exercicio/src/app/component/entrada/entrada.component.html
+++ b/Allyson/exercicio/src/app/component/entrada/entrada.component.html
@@ -1,11 +1,11 @@
-<mat-form-field class="campo">
-    <div class="orienta">
-        <mat-label class="title">{{title}}:</mat-label>
-        <span class="icone">
-            <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-            <span class="descricao">{{descricao}}</span> <!-- ao mover o mouse sobre 'ajuda', mostra a descrição -->
-        </span>
-    </div>
-    <input (keyup)="onKey($event)" (blur)="valida()" value={{saida}} class="campo_input" matInput />
-    <mat-error class="erro"><b>{{msg_erro}}</b></mat-error>
-</mat-form-field>
+<div class="conteudo">
+    <mat-form-field class="campo">
+        <mat-label class="title">{{title}}</mat-label>
+        <input (keyup)="onKey($event)" (blur)="valida()" value={{saida}} class="campo_input" matInput />
+        <mat-hint *ngIf="valida_erro" class="erro"><b>{{title}} não deve estar vazio.</b></mat-hint>
+    </mat-form-field>
+    <span class="icone">
+        <mat-icon aria-hidden="false" aria-label="icone de informação">help_outline</mat-icon>
+        <span class="descricao">{{descricao}}</span>
+    </span>
+</div>
